--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
 
     <body>
         <h1>Odin Recipes</h1>
+        
+        <a href="./recipes/chicken.html">Chicken</a>
+        <a href="./recipes/lasagna.html">Lasagna</a>
+        <a href="./recipes/pie.html">Pie</a>
+        <a href="./recipes/salad.html">Salad</a>
     </body>
 </html>
