Updated all recipe files with description, image, ingredients,and steps

--- a/recipes/chicken.html
+++ b/recipes/chicken.html
@@ -7,6 +7,26 @@
 
     <body>
         <h1>Chicken</h1>
+        <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F2022%2F04%2F21%2F1650415921IMG_1089-2-2000.jpg&w=272&h=272&c=sc&poi=face&q=60" alt="Chicken">
 
+        <h2>Description</h2>
+        <p>Chicken legs so saucy and crispy that they'll make you crave them forever!</p>
+
+        <h3>Ingredients</h3>
+        <ul>
+            <li>4 lbs chicken legs</li>
+            <li>2 tablespoons chili powder</li>
+            <li>1 tablespoon garlic powder</li>
+            <li>1 teaspoon cayenne pepper</li>
+            <li>1 teaspoon Himalayan pink salt</li>
+            <li>2 tablespoons tamari</li>
+        </ul>
+
+        <h3>Steps</h3>
+        <ol>
+            <li>Preheat the oven to 375 degrees F (190 degrees C).</li>
+            <li>Place chicken legs in a large bowl. Spread chili powder, garlic powder, cayenne, and salt onto the chicken; pour sauce over top. Mix thoroughly and transfer to a baking sheet.</li>
+            <li>Bake, uncovered, in the preheated oven until chicken is no longer pink at the bone and the juices run clear, 45 to 50 minutes. An instant-read thermometer inserted near the bone should read 165 degrees F (74 degrees C).</li>
+        </ol>
     </body>
 </html>
