--- a/recipes/pie.html
+++ b/recipes/pie.html
@@ -7,6 +7,26 @@
 
     <body>
         <h1>Pie</h1>
+        <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F401339.jpg&w=272&h=272&c=sc&poi=face&q=60" alt="Pie">
 
+        <h2>Description</h2>
+        <p>Delicious strawberry pie!</p>
+
+        <h3>Ingredients</h3>
+        <ul>
+            <li>9 inch pie crust, baked</li>
+            <li>1 quart fresh strawberries</li>
+            <li>1 cup white sugar</li>
+            <li>3 tablespoons cornstarch</li>
+            <li>3/4 cup water</li>
+            <li>1/2 cup heavy whipping cream</li>
+        </ul>
+
+        <h3>Steps</h3>
+        <ol>
+            <li>Arrange half of strawberries in baked pastry shell. Mash remaining berries and combine with sugar in a medium saucepan. Place saucepan over medium heat and bring to a boil, stirring frequently.</li>
+            <li>In a small bowl, whisk together cornstarch and water. Gradually stir cornstarch mixture into boiling strawberry mixture. Reduce heat and simmer mixture until thickened, about 10 minutes, stirring constantly. Pour mixture over berries in pastry shell.</li>
+            <li>Chill for several hours before serving. In a small bowl, whip cream until soft peaks form. Serve each slice of pie with a dollop of whipped cream.</li>
+        </ol>
     </body>
 </html>
