--- a/recipes/salad.html
+++ b/recipes/salad.html
@@ -7,6 +7,30 @@
 
     <body>
         <h1>Salad</h1>
+        <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F221780.jpg&w=272&h=272&c=sc&poi=face&q=60" alt="Salad">
 
+        <h2>Description</h2>
+        <p>Scrumptious salad!</p>
+
+        <h3>Ingredients</h3>
+        <ul>
+            <li>3 eggs</li>
+            <li>1 poud broccoli, chopped</li>
+            <li>1/4 cup finely chopped red onion</li>
+            <li>1 cup green olives, sliced</li>
+            <li>4 oz jar diced pimentos, drained</li>
+            <li>3/4 cup mayonnaise</li>
+            <li>1 teaspoon dry mustard powder</li>
+            <li>1/2 pinch salt</li>
+            <li>1/2 teaspoon celery seed</li>
+            <li>1 tablespoon chopped fresh dill</li>
+        </ul>
+
+        <h3>Steps</h3>
+        <ol>
+            <li>Place the eggs into a saucepan in a single layer and fill with water to cover the eggs by 1 inch. Cover the saucepan and bring the water to a boil over high heat. Once the water is boiling, remove from the heat and let the eggs stand in the hot water for 15 minutes. Pour out the hot water, then cool the eggs under cold running water in the sink. Peel and chop once cold.</li>
+            <li>Meanwhile, bring a large pot of lightly salted water to a boil. Add the broccoli and cook uncovered until bright green and just tender, about 2 minutes. Drain in a colander, then immediately immerse in ice water for several minutes until cold to stop the cooking process. Once the broccoli is cold, drain well and set aside.</li>
+            <li>Combine the red onion, hard-cooked eggs, green olives, pimentos, mayonnaise, mustard powder, salt, celery seed, and dill in a mixing bowl. Stir in the drained cooked broccoli. Refrigerate overnight for best flavor.</li>
+        </ol>
     </body>
 </html>
