Placed recipes in an unordered list

--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        
-        <a href="./recipes/chicken.html">Chicken</a>
-        <a href="./recipes/lasagna.html">Lasagna</a>
-        <a href="./recipes/pie.html">Pie</a>
-        <a href="./recipes/salad.html">Salad</a>
+
+        <ul>
+        <li><a href="./recipes/chicken.html">Chicken</a></li>
+        <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+        <li><a href="./recipes/pie.html">Pie</a></li>
+        <li><a href="./recipes/salad.html">Salad</a></li>
+        </ul>
     </body>
 </html>
